# langchain_workshop

./: README.md  README_JP.md  pyproject.toml
src/: .env.example  agent.example.py  agent.py
