[project]
name = "langchainworkshop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.3",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
